# seared

./: .gitignore  README.md  pyproject.toml  test.py
seared/: __init__.py  _datetime.py  _enum.py  bool.py  date.py  field.py  float.py  int.py  ndarray.py  nested.py  seared.py  str.py  t.py  time.py
