[tool.poetry]
name = "seared"
version = "0.1.9"
description = ""
authors = ["Ben Wiswell <benjwiswell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
marshmallow = "^3.26.1"
numpy = "^2.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
